src/test/deca/codegen/valid/Objet/SelectionThis.deca
// Description :
//    Test génération de code selection sur un This + Return 
//
// Resultats decac:
// Resultat ima: 3

// PLUTOT OK

class A{
    
    int x = 1;

    int getX(){
        return x;
    }
    
    void setX(int x){
        this.x = x;
    }
}
{
    A a = new A();
    a.setX(3);
    print(a.getX());
    
}
