src/test/deca/codegen/invalid/objet/Error/DivInt0Class.deca
// Erreur : division par zero impossible
// Description : Division par 0
// Resultat : erreur lors de ima

class A{
    int x = 1;
    int y = 0;
    
    void Test(){
        int z = x/y;
    }
}
{
    A a = new A();
    a.Test();
}

